--- a/kube-apiserver-amd64/Dockerfile
+++ b/kube-apiserver-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/kubernetes-apiserver-amd64:v1.9.0 
-MAINTAINER shayu
+FROM k8s.gcr.io/kube-apiserver:v1.13.2
+MAINTAINER clf
